fixed word wrap bug

--- a/src/index.css
+++ b/src/index.css
@@ -196,7 +196,7 @@ textarea::placeholder {
 .blog-posts {
   background-color: var(--muted-foreground);
   border-radius: 0.5em;
-  display: grid;
+  /* display: grid; */
   grid-column: 2/3;
   grid-row: 2/3;
   margin-right: 1em;
@@ -237,6 +237,10 @@ textarea::placeholder {
   line-height: 1.6;
   margin-bottom: 15px;
   text-align: center;
+}
+
+.content {
+  word-wrap: break-word;
 }
 
 .blog-post button {
